un-merged updates from dec 12

--- a/index-EN.html
+++ b/index-EN.html
@@ -1,17 +1,17 @@
 <style>
-    table#shipping-holidays{
-        line-height: 1.2em;
-        margin-bottom:0;
-    }
-    table#shipping-holidays td{
-        border-bottom: 1px solid rgba(0,0,0,0.1);
-    }
-    table#shipping-holidays td, table#shipping-holidays th{
-        padding:0.3rem 0.3rem;
-    }
-    table#shipping-holidays tr.last-row td{
-        border: none;
-    }
+	table#shipping-holidays{
+	line-height: 1.2em;
+	margin-bottom:0;
+	}
+	table#shipping-holidays td{
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+	}
+	table#shipping-holidays td, table#shipping-holidays th{
+	padding:0.3rem 0.3rem;
+	}
+	table#shipping-holidays tr.last-row td{
+	border: none;
+	}
 </style>
 <div class="col-12 col-md-3" id="faq-sidebar">
 	<h2 class="pt-1">Help Center</h2>
@@ -43,17 +43,14 @@
 		<div class="faq-search">
 			<input type="text" placeholder="Search Shipping" />
 		</div>
-		<div style="background-image: url(https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png);padding: 0 1em 1em;margin: 1.5em 0 2em;">
-			<p style="font-weight: 500;font-size: 1.5em;margin-top: 0.5em;">Get it in time for Christmas.</p>
-			<p>Below are the final ordering dates by region and shipping method.</p>
+		<div style="background-image: url('https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png'); padding: 0 1em 1em; margin: 1.5em 0 2em;">
+			<p style="font-weight: 500; font-size: 1.5em; margin-top: 0.5em;">Get it in time for Christmas.</p>
+			<p>There’s still time! Don’t worry about Canada Post delays - we’ve taken them into account in our final ordering dates and added extra buffers just to be safe. We’ll even guarantee your delivery for Christmas: if you don’t get it in time, we’ll give you 20% of the cost of your order in Alti Dollars.*</p>
 			<p><strong>Xpresspost is FREE on orders over 99$.</strong> For a limited time only, in Canada.</p>
-			<p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff;line-height: 1.7em;">We’re closely monitoring Canada Post’s backlog caused by the rotating strike that ended on Nov. 27.
-				The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method.
-				These dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as directly indicated by Canada Post.</strong>
-				We will provide daily updates on this page.
-			</p>
-			<p style="font-weight: 500;font-size: 1.3em;margin-top: 0.5em;">Final ordering dates, by region and shipping method</p>
-			<p><i style="opacity: 0.55;white-space: nowrap;">(Last updated: December 7, 2018)</i></p>
+			<a href="/collections/all" style="background-color: #eaeaea; color: #000; border: none;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'"> Shop now </a>
+			<p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff; line-height: 1.7em;">We’re closely monitoring Canada Post’s backlog caused by the rotating strike that ended on Nov. 27. The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method. These dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as directly indicated by Canada Post.</strong> We will provide daily updates on this page.</p>
+			<p style="font-weight: 500; font-size: 1.3em; margin-top: 0.5em;">Final ordering dates, by region and shipping method</p>
+			<p><i style="opacity: 0.55; white-space: nowrap;">(Last updated: December 13 2018)</i></p>
 			<div id="table-container">
 				<table id="shipping-holidays">
 					<thead style="vertical-align: bottom;">
@@ -65,176 +62,184 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Greater Montreal, Toronto &amp; Ottawa</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Greater Montreal, Toronto &amp; Ottawa</strong></td>
 						</tr>
 						<tr>
 							<td>Greater Ottawa, Kingston, Belleville</td>
+							<td>18-Dec-18</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Toronto (all postal codes starting with M)</td>
-							<td>13-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>17-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Guelph, Cambridge, London, Windsor, Owen Sound</td>
+							<td>18-Dec-18</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Longueuil, Gatineau</td>
-							<td>17-Dec-18</td>
-							<td>17-Dec-18</td>
+							<td>18-Dec-18</td>
+							<td>18-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Montreal, Laval (all postal codes starting with H)</td>
-							<td>17-Dec-18</td>
-							<td>17-Dec-18</td>
+							<td>18-Dec-18</td>
+							<td>18-Dec-18</td>
 						</tr>
 						<tr class="last-row">
 							<td>Southeast Ontario (all postal codes starting with L)</td>
-							<td>17-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>18-Dec-18</td>
+							<td>14-Dec-18</td>
 						</tr>
 						<tr>
-							<td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Metropolitain Canada</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Metropolitain Canada</strong></td>
 						</tr>
 						<tr>
 							<td>Eastern Ontario (all postal codes starting with K)</td>
+							<td>17-Dec-18</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Calgary / Greater Edmonton</td>
-							<td>14-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Charlottetown</td>
-							<td>14-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Halifax</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Quebec city, Trois-Rivières</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>14-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Regina / Greater Saskatoon</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Saint John / Moncton</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater St. John's</td>
-							<td>14-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Vancouver / Greater Victoria</td>
-							<td>12-Dec-18</td>
-							<td>06-Dec-18</td>
+							<td>13-Dec-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Winnipeg</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Southwest Ontario (all postal codes starting with N)</td>
+							<td>17-Dec-18</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Western Ontario (all postal codes starting with P)</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Western Quebec (all postal codes starting with J)</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>14-Dec-18</td>
 						</tr>
 						<tr>
-							<td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Metropolitain Rural Canada</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Metropolitain Rural Canada</strong></td>
 						</tr>
 						<tr>
 							<td>Alberta (all postal codes starting with T)</td>
-							<td>13-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>British Columbia (all postal codes starting with V)</td>
-							<td>13-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Eastern Quebec (all postal codes starting with G)</td>
 							<td>13-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Iqaluit (all postal codes starting with X0A0A1, X0A0H0 and X0A1H0)</td>
-							<td>12-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>13-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Manitoba (all postal codes starting with R)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>New Brunswick (all postal codes starting with E)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Newfoundland (all postal codes starting with A)</td>
-							<td>13-Dec-18</td>
-							<td>06-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Nova Scotia (all postal codes starting with B)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Prince Edward Island (all postal codes starting with C)</td>
-							<td>13-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Saskatchewan (all postal codes starting with S)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Whitehorse (all postal codes starting with Y1A)</td>
-							<td>13-Dec-18</td>
-							<td>05-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">07-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Yellowknife (all postal codes starting with X1A)</td>
-							<td>13-Dec-18</td>
-							<td>06-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Yukon / Nunavut / NWT</td>
-							<td>07-Dec-18</td>
-							<td>27-Nov-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
+							<td style="color: #ccc;">29-Nov-18</td>
 						</tr>
 					</tbody>
 				</table>
+			</div>
+			<div style="color: gray; font-size: small;">
+				<p>*The following requirements must be met to qualify for the 20% guarantee:</p>
+				<ul>
+					<li>Order is placed on or before final delivering dates to your specific region;</li>
+					<li>Your credit card must be successfully charged before the deadline;</li>
+					<li>An attempted delivery meets our delivery guarantee. </li>
+				</ul>
 			</div>
 		</div>
 		<div id="accordionShipping" class="accordion">
