--- a/index-FR.html
+++ b/index-FR.html
@@ -43,13 +43,14 @@
 		<div class="faq-search">
 			<input type="text" placeholder="Rechercher dans Livraison" />
 		</div>
-		<div style="background-image: url(https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png);padding: 0 1em 1em;margin: 1.5em 0 2em;">
-			<p style="font-weight: 500;font-size: 1.5em;margin-top: 0.5em;">Recevez votre commande à temps pour Noël.</p>
-			<p>Consultez ci-dessous les dates limites de commande en fonction de la destination et de la méthode d’envoi. </p>
-			<p><strong>Xpresspost est GRATUIT sur les commandes de plus de 99$.</strong> Pour un temps limité, au Canada seulement. </p>
-			<p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff;line-height: 1.7em;">Nous suivons avec attention les retards de livraison de Postes Canada dus aux grèves tournantes ayant pris fin le 27 novembre. Les dates suivantes sont les <strong>dernières journées</strong> pour commander afin de recevoir votre colis à temps pour Noël. Les dates diffèrent selon de la destination de votre envoi et de la méthode de livraison choisie. Les <strong>dates limites</strong> de commandes ci-dessous prennent en compte nos délais de traitement, les délais de livraison standard de Postes Canada, ainsi que les retards maximum prévus et fournis par Postes Canada. Des mises à jour quotidiennes seront publiées sur cette page.</p>
-			<p style="font-weight: 500;font-size: 1.3em;margin-top: 0.5em;">Dates limites de commande selon la région d’envoi de votre colis et la méthode de livraison</p>
-			<p><i style="opacity: 0.55;white-space: nowrap;">(Dernière mise à jour : 7 décembre 2018)</i></p>
+		<div style="background-image: url('https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png'); padding: 0 1em 1em; margin: 1.5em 0 2em;">
+			<p style="font-weight: 500; font-size: 1.5em; margin-top: 0.5em;">Recevez votre commande à temps pour Noël.</p>
+			<p>Il est encore temps de commander vos cadeaux de Noël! Ne vous souciez pas des retards de livraison de Postes Canada, nous les avons comptés dans les dates limites de commande et avons ajouté un délai supplémentaire pour être certains que vous recevrez votre colis arrivera avant les Fêtes. Nous garantissons que vos cadeaux arriveront pour Noël : si vous ne recevez pas vos achats à temps, nous vous offrirons 20% du montant total de votre commande en Alti Dollars.*</p>
+			<p><strong>Xpresspost est GRATUIT sur les commandes de plus de 99$.</strong> Pour un temps limité, au Canada seulement.</p>
+			<a href="/collections/all" style="background-color: #eaeaea; color: #000; border: none;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'"> Magasinez </a>
+			<p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff; line-height: 1.7em;">Nous suivons avec attention les retards de livraison de Postes Canada dus aux grèves tournantes ayant pris fin le 27 novembre. Les dates suivantes sont les <strong>dernières journées</strong> pour commander afin de recevoir votre colis à temps pour Noël. Les dates diffèrent selon de la destination de votre envoi et de la méthode de livraison choisie. Les <strong>dates limites</strong> de commandes ci-dessous prennent en compte nos délais de traitement, les délais de livraison standard de Postes Canada, ainsi que les retards maximum prévus et fournis par Postes Canada. Des mises à jour quotidiennes seront publiées sur cette page.</p>
+			<p style="font-weight: 500; font-size: 1.3em; margin-top: 0.5em;">Dates limites de commande selon la région d’envoi de votre colis et la méthode de livraison</p>
+			<p><i style="opacity: 0.55; white-space: nowrap;">(Dernière mise à jour : 13 décembre 2018)</i></p>
 			<div id="table-container">
 				<table id="shipping-holidays">
 					<thead style="vertical-align: bottom;">
@@ -61,176 +62,184 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Grand Montréal, Toronto et Ottawa</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Grand Montréal, Toronto et Ottawa</strong></td>
 						</tr>
 						<tr>
 							<td>Grand Ottawa, Kingston, Belleville</td>
+							<td>18-Dec-18</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Toronto (tous les codes postaux commençant par M)</td>
-							<td>13-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>17-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Guelph, Cambridge, London, Windsor, Owen Sound</td>
+							<td>18-Dec-18</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Longueuil, Gatineau</td>
-							<td>17-Dec-18</td>
-							<td>17-Dec-18</td>
+							<td>18-Dec-18</td>
+							<td>18-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Montréal, Laval (tous les codes postaux commençant par H)</td>
-							<td>17-Dec-18</td>
-							<td>17-Dec-18</td>
+							<td>18-Dec-18</td>
+							<td>18-Dec-18</td>
 						</tr>
 						<tr class="last-row">
 							<td>Le sud de l'Ontario (tous les codes postaux commençant par L)</td>
-							<td>17-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>18-Dec-18</td>
+							<td>14-Dec-18</td>
 						</tr>
 						<tr>
-							<td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Canada métropolitain</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Canada métropolitain</strong></td>
 						</tr>
 						<tr>
 							<td>Sud-Est de l'Ontario (tous les codes postaux commençant par K)</td>
+							<td>17-Dec-18</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Calgary / Grand Edmonton</td>
-							<td>14-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Charlottetown</td>
-							<td>14-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Halifax</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Québec, Trois-Rivières</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>14-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Regina / Grand Saskatoon</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Saint John / Moncton</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand St. John's</td>
-							<td>14-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Vancouver / Grand Victoria</td>
-							<td>12-Dec-18</td>
-							<td>06-Dec-18</td>
+							<td>13-Dec-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Winnipeg</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Sud-ouest de l'Ontario (tous les codes postaux commençant par N)</td>
+							<td>17-Dec-18</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Ouest de l’Ontario (tous les codes postaux commençant par P)</td>
-							<td>14-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>17-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Ouest du Québec (tous les codes postaux commençant par J)</td>
 							<td>14-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>14-Dec-18</td>
 						</tr>
 						<tr>
-							<td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Canada rural</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Canada rural</strong></td>
 						</tr>
 						<tr>
 							<td>Alberta (tous les codes postaux commençant par T)</td>
-							<td>13-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>British Columbia (tous les codes postaux commençant par V)</td>
-							<td>13-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Est du Québec (tous les codes postaux commençant par G)</td>
 							<td>13-Dec-18</td>
-							<td>11-Dec-18</td>
+							<td>13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Iqaluit (tous les codes postaux commençant par X0A0A1, X0A0H0 and X0A1H0)</td>
-							<td>12-Dec-18</td>
-							<td>12-Dec-18</td>
+							<td>13-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Manitoba (tous les codes postaux commençant par R)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Nouveau-Brunswick (tous les codes postaux commençant par E)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Terre-Neuve (tous les codes postaux commençant par A)</td>
-							<td>13-Dec-18</td>
-							<td>06-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Nouvelle-Écosse (tous les codes postaux commençant par B)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Île-du-Prince-Édouard (tous les codes postaux commençant par C)</td>
-							<td>13-Dec-18</td>
-							<td>07-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">11-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Saskatchewan (tous les codes postaux commençant par S)</td>
-							<td>13-Dec-18</td>
-							<td>10-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Whitehorse (tous les codes postaux commençant par Y1A)</td>
-							<td>13-Dec-18</td>
-							<td>05-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">07-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Yellowknife (tous les codes postaux commençant par X1A)</td>
-							<td>13-Dec-18</td>
-							<td>06-Dec-18</td>
+							<td>14-Dec-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Yukon / Nunavut / NWT</td>
-							<td>07-Dec-18</td>
-							<td>27-Nov-18</td>
+							<td style="color: #ccc;">10-Dec-18</td>
+							<td style="color: #ccc;">29-Nov-18</td>
 						</tr>
 					</tbody>
 				</table>
+			</div>
+			<div style="color: gray; font-size: small;">
+				<p>*Pour obtenir un crédit équivalent à 20% de votre commande, vous devez respecter les conditions suivantes:</p>
+				<ul>
+					<li>La commande doit être passée avant ou à la date limite de commande en fonction de votre région.</li>
+					<li>Votre carte de crédit doit avoir été facturée avec succès avant la date limite.</li>
+					<li>Si une tentative de livraison a été effectuée, nous considérons que nous avons respecté notre engagement.</li>
+				</ul>
 			</div>
 		</div>
 		<div id="accordionShipping" class="accordion">
