update too late date in grey for 13 dec

--- a/index-EN.html
+++ b/index-EN.html
@@ -115,7 +115,7 @@
 						<tr>
 							<td>Greater Halifax</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Quebec city, Trois-Rivières</td>
@@ -125,12 +125,12 @@
 						<tr>
 							<td>Greater Regina / Greater Saskatoon</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Saint John / Moncton</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater St. John's</td>
@@ -139,13 +139,13 @@
 						</tr>
 						<tr>
 							<td>Greater Vancouver / Greater Victoria</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Greater Winnipeg</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Southwest Ontario (all postal codes starting with N)</td>
@@ -155,7 +155,7 @@
 						<tr>
 							<td>Western Ontario (all postal codes starting with P)</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Western Quebec (all postal codes starting with J)</td>
@@ -163,7 +163,7 @@
 							<td>14-Dec-18</td>
 						</tr>
 						<tr>
-							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Metropolitain Rural Canada</strong></td>
+							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Rural Canada</strong></td>
 						</tr>
 						<tr>
 							<td>Alberta (all postal codes starting with T)</td>
@@ -177,12 +177,12 @@
 						</tr>
 						<tr>
 							<td>Eastern Quebec (all postal codes starting with G)</td>
-							<td>13-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Iqaluit (all postal codes starting with X0A0A1, X0A0H0 and X0A1H0)</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
