--- a/index-FR.html
+++ b/index-FR.html
@@ -115,7 +115,7 @@
 						<tr>
 							<td>Grand Halifax</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Québec, Trois-Rivières</td>
@@ -125,7 +125,7 @@
 						<tr>
 							<td>Grand Regina / Grand Saskatoon</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Saint John / Moncton</td>
@@ -139,13 +139,13 @@
 						</tr>
 						<tr>
 							<td>Grand Vancouver / Grand Victoria</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 							<td style="color: #ccc;">10-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Grand Winnipeg</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Sud-ouest de l'Ontario (tous les codes postaux commençant par N)</td>
@@ -155,7 +155,7 @@
 						<tr>
 							<td>Ouest de l’Ontario (tous les codes postaux commençant par P)</td>
 							<td>17-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Ouest du Québec (tous les codes postaux commençant par J)</td>
@@ -177,12 +177,12 @@
 						</tr>
 						<tr>
 							<td>Est du Québec (tous les codes postaux commençant par G)</td>
-							<td>13-Dec-18</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 						</tr>
 						<tr>
 							<td>Iqaluit (tous les codes postaux commençant par X0A0A1, X0A0H0 and X0A1H0)</td>
-							<td>13-Dec-18</td>
+							<td style="color: #ccc;">13-Dec-18</td>
 							<td style="color: #ccc;">12-Dec-18</td>
 						</tr>
 						<tr>
