Begin addon of Boxing Day FAQ

--- a/index-FR.html
+++ b/index-FR.html
@@ -24,6 +24,7 @@
 		<li class="h4"><a href="#marketplace">Place de marché</a> <i class="alti-icon alti-icon-marketplace"></i></li>
 		<li class="h4 d-md-none"><a href="#faq">FAQ</a></li>
 		<li class="h4"><a href="#contact">Nous contacter</a></li>
+		<li class="h4" style="border-top: 1px #000 solid;margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">FAQ Soldes d’après Noël</a></li>
 	</ul>
 	<h2 class="d-none d-md-block faq-menu">FAQ</h2>
 	<ul class="top-questions list-unstyled d-none d-md-block">
@@ -1164,4 +1165,37 @@
 		</div>
 	</div>
 	<!-- END Contact -->
+	<!-- Boxing Day -->
+	<div class="content" id="boxingday">
+		<h1>FAQ Soldes d'avant Noël</h1>
+		<p>Si vous êtes familier avec les soldes d’après Noël, vous êtes probablement déjà occupé à consulter les sites de vos magasins favoris et à mettre des signets aux rabais que vous ne voulez pas manquer.</p>
+		<p>Dans le but d’améliorer votre expérience de magasinage durant les soldes d’après Noël, nous avons rassemblé une liste des questions les plus posées par nos clients au cours des dernières années. Nous espérons que vous y trouverez réponse à toutes vos interrogations. Il ne vous restera plus qu’à encercler les dates sur votre calendrier et à programmer une alarme pour ne rien manquer <a href="/pages/boxing-day">des rabais</a>.</p>
+		<div id="accordionBoxingday" class="accordion">
+			<div class="card">
+				<div class="card-header">
+					<h2>Quand commencent les soldes d’après Noël?</h2>
+				</div>
+				<div class="card-body" id="boxing-day-start-date">
+					<p>Les soldes d’après Noël débutent le 25 décembre et se poursuivent jusqu’au <span class="text-nowrap">1er janvier</span>. Des <a href="/pages/boxing-day">rabais spéciaux</a> seront toutefois affichés sur Altitude-sports.com dès le <span class="text-nowrap">19 décembre</span> au cours de nos soldes d’avant Noël.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h2>Qu’arrive-t-il si j’achète un produit et que son prix baisse quelques jours après?</h2>
+				</div>
+				<div class="card-body">
+					<p>Chez Altitude Sports, notre politique d’égalisation de prix garantit le prix de votre achat jusqu’à 15 jours. Si vous avez acheté un produit aujourd’hui et que son prix descend d’ici les soldes d’après Noël, sur altitude-sports.com ou chez l’un de nos compétiteurs, nous égalerons le prix le plus bas en vous créditant le montant équivalent à la différence. Consultez notre <a href="#price">politique de prix</a> pour tous les détails.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h2>Comment dois-je procéder pour demander un ajustement de prix?</h2>
+				</div>
+				<div class="card-body">
+					<p>Veuillez suivre la procédure d’égalisation de prix en cliquant sur le bouton ci-dessous.</p>
+					<a href="#price" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Demandez une égalisation de prix</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
