--- a/index-EN.html
+++ b/index-EN.html
@@ -24,6 +24,7 @@
 		<li class="h4"><a href="#marketplace">Marketplace</a> <i class="alti-icon alti-icon-marketplace"></i></li>
 		<li class="h4 d-md-none"><a href="#faq">FAQ</a></li>
 		<li class="h4"><a href="#contact">Contact Us</a></li>
+		<li class="h4" style="border-top: 1px #000 solid;margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">Boxing Day FAQ</a></li>
 	</ul>
 	<h2 class="d-none d-md-block faq-menu">FAQ</h2>
 	<ul class="top-questions list-unstyled d-none d-md-block">
@@ -50,7 +51,7 @@
 			<a href="/collections/all" style="background-color: #eaeaea; color: #000; border: none;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'"> Shop now </a>
 			<p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff; line-height: 1.7em;">We’re closely monitoring Canada Post’s backlog caused by the rotating strike that ended on Nov. 27. The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method. These dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as directly indicated by Canada Post.</strong> We will provide daily updates on this page.</p>
 			<p style="font-weight: 500; font-size: 1.3em; margin-top: 0.5em;">Final ordering dates, by region and shipping method</p>
-			<p><i style="opacity: 0.55; white-space: nowrap;">(Last updated: December 13 2018)</i></p>
+			<p><i style="opacity: 0.55; white-space: nowrap;">(Last updated: December 14 2018)</i></p>
 			<div id="table-container">
 				<table id="shipping-holidays">
 					<thead style="vertical-align: bottom;">
@@ -1151,6 +1152,39 @@
 						<li><span style="display:inline-block;width:7em">Saturday:</span> 10-5 pm</li>
 						<li><span style="display:inline-block;width:7em">Sunday:</span> 10-5 pm</li>
 					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Boxing Day -->
+	<div class="content" id="boxingday">
+		<h1>Boxing Day FAQ</h1>
+		<p>If you’re familiar with Boxing Day, you’re probably busy scoping out your favourite shops and bookmarking your favourite online deals.</p>
+		<p>To improve your Boxing Day shopping experience, we’ve created the following FAQ list, a collection of the most Frequently Asked Questions from our clients in past years. The hope is that all your questions will be answered within. Then, all that’s left is to circle the date and set your alarm to find <a href="/pages/boxing-day">the best deals</a>.</p>
+		<div id="accordionBoxingday" class="accordion">
+			<div class="card">
+				<div class="card-header">
+					<h2>When does Boxing Day begin?</h2>
+				</div>
+				<div class="card-body" id="boxing-day-start-date">
+					<p>Boxing Day runs from <strong class="text-nowrap">December 25th</strong> until <span class="text-nowrap">January 1st</span>, but you can find <a href="/pages/boxing-day">special deals</a> on Altitude-sports.com as of <strong class="text-nowrap">December 19th</strong> thanks to our Pre Boxing Day sale.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h2>What happens if I buy something and then the price drops a few days later?</h2>
+				</div>
+				<div class="card-body">
+					<p>At Altitude Sports we have a price-matching policy that covers the 15 days after your purchase. If you purchase an item between now and Boxing Day, and either the price drops or you find the product cheaper elsewhere, we’ll match the price by crediting you for the price difference on the item in question. You can find all the details by visiting our <a href="#price">price policy page</a>.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h2>What do I do to request a price match?</h2>
+				</div>
+				<div class="card-body">
+					<p>Please follow our price matching procedure by clicking the button below.</p>
+					<a href="#price" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
 				</div>
 			</div>
 		</div>
