add new accordions for Free Express Shipping and Free Returns

--- a/index-EN.html
+++ b/index-EN.html
@@ -255,6 +255,15 @@
 			</div>
 			<div class="card">
 				<div class="card-header">
+					<h2>Free express shipping on Canada Goose, Arc'teryx, Arc'teryx Veilance & Nobis</h2>
+				</div>
+				<div class="card-body" id="free-express-shipping-brands">
+					<p>Valid on orders over $49 shipped within Canada. Valid for a limited time only. Surcharges may be applied in cases where box dimension, weight, or remoteness of delivery address are exceptional.</p>
+					<p>Shop <a href="/collections/canada-goose">Canada Goose</a>, <a href="/collections/arcteryx">Arc'teryx</a>, <a href="/collections/arcteryx-veilance">Arc'teryx Veilance</a> & <a href="/collections/nobis">Nobis</a>.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
 					<h2>Order Processing</h2>
 				</div>
 				<div class="card-body">
@@ -495,6 +504,15 @@
 				</div>
 				<div class="card-body" id="first-time">
 					<p>To eliminate all barriers from ordering online, we want to offer you a free return with your first order. Order any product, in the sizes/colours you want to try, and send back free of charge anything you don't want to keep. Applies to orders delivered in Canada. Does not apply on product sold by Marketplace sellers. One prepaid shipping label provided.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h2>Free returns on Canada Goose, Arc'teryx, Arc'teryx Veilance & Nobis</h2>
+				</div>
+				<div class="card-body" id="free-returns-brands">
+					<p>Valid on orders over $49 shipped within Canada. Valid for a limited time only. Surcharges may be applied in cases where box dimension, weight, or remoteness of delivery address are exceptional.</p>		
+					<p>Shop <a href="/collections/canada-goose">Canada Goose</a>, <a href="/collections/arcteryx">Arc'teryx</a>, <a href="/collections/arcteryx-veilance">Arc'teryx Veilance</a> & <a href="/collections/nobis">Nobis</a>.</p>
 				</div>
 			</div>
 			<div class="card">
