--- a/index-FR.html
+++ b/index-FR.html
@@ -255,6 +255,15 @@
 			</div>
 			<div class="card">
 				<div class="card-header">
+					<h2>Livraison express gratuite sur Canada Goose, Arc'teryx, Arc'teryx Veilance et Nobis</h2>
+				</div>
+				<div class="card-body" id="free-express-shipping-brands">
+					<p>Valide sur les commandes de 49$ et plus livrées au Canada seulement. Valide pour un temps limité seulement. Des surcharges peuvent s'appliquer pour certains envois exceptionnels de par leur dimension, leur poids ou l'éloignement de l'adresse de livraison.</p>
+					<p>Magasinez <a href="/collections/canada-goose">Canada Goose</a>, <a href="/collections/arcteryx">Arc'teryx</a>, <a href="/collections/arcteryx-veilance">Arc'teryx Veilance</a> et <a href="/collections/nobis">Nobis</a>.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
 					<h2>Délais de traitement de commande</h2>
 				</div>
 				<div class="card-body">
@@ -495,6 +504,15 @@
 				</div>
 				<div class="card-body" id="first-time">
 					<p>Pour vous simplifier la vie, nous offrons le retour gratuit sur votre toute première commande. Commandez n’importe quel produit, dans les couleurs et grandeurs de votre choix, et retournez à nos frais les articles que vous ne désirez pas conserver. S’applique sur les commandes livrées au Canada seulement. Non applicable pour les articles provenant des vendeurs de la Place de marché. Un seul bordereau de retour fourni.</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h2>Retours gratuits sur Canada Goose, Arc'teryx, Arc'teryx Veilance et Nobis</h2>
+				</div>
+				<div class="card-body" id="free-returns-brands">
+					<p>Valide sur les commandes de 49$ et plus livrées au Canada seulement. Valide pour un temps limité seulement. Des surcharges peuvent s'appliquer pour certains envois exceptionnels de par leur dimension, leur poids ou l'éloignement de l'adresse de livraison.</p>		
+					<p>Magasinez <a href="/collections/canada-goose">Canada Goose</a>, <a href="/collections/arcteryx">Arc'teryx</a>, <a href="/collections/arcteryx-veilance">Arc'teryx Veilance</a> et <a href="/collections/nobis">Nobis</a>.</p>
 				</div>
 			</div>
 			<div class="card">
